--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "devStart": "nodemon server.js"
+    "devstart": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.11.6"
+    "express-session": "^1.17.1",
+    "mongoose": "^5.11.6",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.3.5",
+    "sequelize-auto": "^0.7.5",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
