--- a/config/config.json
+++ b/config/config.json
@@ -4,19 +4,20 @@
     "password": "passroot",
     "database": "librarymanagementsystem",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": 0
   },
   "test": {
     "username": "root",
-    "password": "passroot",
-    "database": "librarymanagementsystem",
+    "password": null,
+    "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "passroot",
-    "database": "librarymanagementsystem",
+    "password": null,
+    "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
